# simpler

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  HARDWARE_SIMULATION.md  HARDWARE_TEST.md  INSTRUCTION_COUNTING.md  INTEGRATION_NOTES.md  Orchestrator线程指令数量汇总及性能分析——Qwen3.md  README.md  YHR_CHANGES.md  _run_early_st_board.sh  _run_st_dev2.sh  bench_batch_dispatch.sh  ci.py  ci.sh  conftest.py  module-struct-access-04161646.xlsx  pa_unroll数据统计.md  profile_grep.sh  pto_isa.pin  pyproject.toml  report.md
_migrate_patches/: early_phase0b.diff  pto_scheduler_partial.h
docs/: HARDWARE_TEST_VS_MAIN_ANALYSIS.md  PTO2_SIM_AICORE_UT_analysis.md  a5-sdma-overlay.md  aicore-kernel-programming.md  architecture.md  ci.md  (+24 more)
src/1c1v/platform/onboard/host/: CMakeLists.txt  comm_hccl.cpp  device_runner.cpp  device_runner.h  host_regs.cpp  memory_allocator.cpp  platform_compile_info.cpp  pto_runtime_c_api.cpp
src/1c1v/platform/sim/: CMakeLists.txt
src/1c1v/platform/sim/aicore/: CMakeLists.txt  inner_kernel.h  kernel.cpp
src/1c1v/platform/sim/aicpu/: CMakeLists.txt  cache_ops.cpp  device_log.cpp  device_malloc.cpp  device_time.cpp  orch_so_file.cpp  platform_aicpu_affinity.cpp  spin_hint.h
src/1c1v/platform/sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  memory_allocator.cpp  platform_compile_info.cpp  pto_runtime_c_api.cpp
src/a2a3/platform/onboard/aicpu/: CMakeLists.txt  device_log.cpp  kernel.cpp
src/a2a3/platform/onboard/host/: CMakeLists.txt  comm_hccl.cpp  device_runner.cpp  device_runner.h  pto_runtime_c_api.cpp
src/a2a3/platform/sim/aicpu/: CMakeLists.txt  device_log.cpp  spin_hint.h
src/a2a3/platform/sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  instr_count_bridge.cc  instr_count_bridge.h  memory_allocator.cpp  pto_runtime_c_api.cpp
src/a5/platform/onboard/aicpu/: CMakeLists.txt  kernel.cpp
src/a5/platform/sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  instr_count_bridge.cc  instr_count_bridge.h  pto_runtime_c_api.cpp
src/platform/a2a3sim/aicore/: CMakeLists.txt  inner_kernel.h  kernel.cpp
src/platform/a2a3sim/aicpu/: CMakeLists.txt  aicpu_regs.cpp  device_malloc.cpp
src/platform/a2a3sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  kernel_dispatch_stub.cpp  pto_runtime_c_api.cpp
tests/aicpu_ut/: CHANGES_NECESSITY_ANALYSIS.md  CMakeLists.txt  aicpu_ut_readme.md  perf_sched.sh  run_tests.md  run_tests.sh  tests.md  validate_param_combinations.sh
tests/aicpu_ut/benchmark/: paged_consumer_block_table.cpp  qwen3_decode_manual_scope.cpp  qwen3_decode_tensormap.cpp
tests/aicpu_ut/common/: cpu_affinity.cpp  cpu_affinity.h  sim_run_pto2.cpp  test_common.cpp  test_common.h  test_log_stubs.cpp
tests/aicpu_ut/docs/: profiling1_file_writes_during_timing.md
tests/aicpu_ut/functional/: test_cpu_affinity.cpp  test_platform_config.cpp
tests/aicpu_ut/perf/cases/: CASES_DESCRIPTION.md  json_cases.h  test_alternating_matmul_add.cpp  test_batch_paged_attention.cpp  test_benchmark_bgemm.cpp  test_deg2.cpp  test_deg4.cpp  test_deg8.cpp  test_latency.cpp  test_linear.cpp  test_paged_attention.cpp  test_paged_attention_unroll.cpp  test_qwen3_prefill_layer.cpp  test_throughput.cpp
tests/aicpu_ut/perf/drivers/: select_backend_case.inc  sim_swimlane.h  test_concurrent.cpp  test_orch_only.cpp  test_orchestrator.cpp  test_orchestrator_scheduler.cpp  test_sched_prof_only.cpp  test_scheduler.cpp
tests/aicpu_ut/perf/spmd/: SPMD_BLOCKNUM_INSTR_ANALYSIS.md  test_spmd_basic.cpp  test_spmd_multiblock_aiv.cpp  test_spmd_multiblock_mix.cpp
tests/aicpu_ut/plugins/: Makefile  insn_count.c
tests/aicpu_ut/tests/perf/: test_batch_paged_attention.cpp  test_paged_attention.cpp
tests/aicpu_ut/tests/perf/cases/: CASES_DESCRIPTION.md  alternating_matmul_add.cpp  batch_paged_attention.cpp  benchmark_bgemm.cpp  deg2_case.cpp  deg4_case.cpp  deg8_case.cpp  latency_case.cpp  linear_case.cpp  paged_attention.cpp  paged_attention_unroll.cpp  throughput_case.cpp
tests/aicpu_ut/tests/perf/common/: sim_swimlane.h  test_concurrent.cpp  test_orch_only.cpp  test_sched_prof_only.cpp
tests/aicpu_ut/tools/: README.md  all_in_one.sh  collect_profiling_data.sh  compare_profiling.sh  count_between_markers.sh  count_scheduler_loop_markers.sh  flamegraph_latency_orch_only.sh  format_profiling_output.py  gen_report_stats.sh  perf_sched.sh  resolve_plugin_qemu.sh  sweep_latency.sh  sweep_throughput.sh  validate_param_combinations.sh
tests/aicpu_ut/tools/analysis/: analyze_submit_phases_vs_tensors.py  build_submit_phase_report.py  count_between_markers.sh  count_insn_types.sh  count_scheduler_insn_types.sh  generate_scheduler_submit_report_md.py  generate_submit_report_md.py  merge_orch_sched_submit_reports.py  validate_param_combinations.sh
tests/aicpu_ut/tools/benchmark/: sweep_latency.sh  sweep_throughput.sh
tests/aicpu_ut/tools/dev/: gen_compile_commands.py  test_catalog.py
tests/aicpu_ut/tools/profiling/: README.md  all_in_one.sh  benchmark_rounds.sh  compare_profiling.sh  device_log_resolver.py  format_profiling_output.py  format_profiling_output.sh  gen_sweep_flamegraphs.sh  organize_and_label_flamegraphs.py  perf_to_mermaid.py  post_run_analysis.sh  print_task_stats.py  sched_overhead_analysis.py  swimlane_converter.py
tests/aicpu_ut/tools/utils/: flamegraph_latency_orch_only.sh  perf_sched.sh
tests/ut/cpp/: CMakeLists.txt  test_hccl_comm.cpp
tests/ut/cpp/a2a3/: test_shared_memory.cpp  test_task_allocator.cpp  test_wiring.cpp
tests/ut/cpp/a5/: test_scheduler_state.cpp  test_task_state.cpp  test_tensor_dump.cpp  test_wiring.cpp
tests/ut/cpp/common/: test_buffer_pool_manager.cpp  test_l3_l2_message_queue.cpp  test_l3_l2_orch_comm.cpp  test_l3_l2_orch_comm_service.cpp  test_l3_l2_orch_comm_sim_runner.cpp  test_l3_l2_orch_endpoint.cpp  test_profiler_base.cpp  test_tm_tensormap.cpp  test_trb_runtime_temp_buffer.cpp
tests/ut/cpp/hardware/: test_comm_lifecycle.cpp
tests/ut/cpp/hierarchical/: test_orchestrator.cpp  test_remote_wire.cpp  test_scheduler.cpp
tests/ut/cpp/stubs/: test_stubs.cpp
(+1264 files in other folders)
